src/nodes/snapshots/darklua_core__nodes__block__test__insert_statement_after_statement_upper_bound_with_tokens.snap
---
source: src/nodes/block.rs
assertion_line: 461
expression: block
snapshot_kind: text
---
Block {
    statements: [
        Do(
            DoStatement {
                block: Block {
                    statements: [],
                    last_statement: None,
                    tokens: Some(
                        BlockTokens {
                            semicolons: [],
                            last_semicolon: None,
                            final_token: None,
                        },
                    ),
                },
                tokens: Some(
                    DoTokens {
                        do: Token {
                            position: LineNumberReference {
                                start: 0,
                                end: 2,
                                line_number: 1,
                                source_id: 0,
                            },
                            leading_trivia: [],
                            trailing_trivia: [
                                Trivia {
                                    position: LineNumberReference {
                                        start: 2,
                                        end: 3,
                                        line_number: 1,
                                        source_id: 0,
                                    },
                                    kind: Whitespace,
                                },
                            ],
                        },
                        end: Token {
                            position: LineNumberReference {
                                start: 3,
                                end: 6,
                                line_number: 1,
                                source_id: 0,
                            },
                            leading_trivia: [],
                            trailing_trivia: [],
                        },
                    },
                ),
            },
        ),
        Repeat(
            RepeatStatement {
                block: Block {
                    statements: [],
                    last_statement: None,
                    tokens: None,
                },
                condition: False(
                    None,
                ),
                tokens: None,
            },
        ),
    ],
    last_statement: None,
    tokens: Some(
        BlockTokens {
            semicolons: [
                Some(
                    Token {
                        position: LineNumberReference {
                            start: 6,
                            end: 7,
                            line_number: 1,
                            source_id: 0,
                        },
                        leading_trivia: [],
                        trailing_trivia: [],
                    },
                ),
                None,
            ],
            last_semicolon: None,
            final_token: None,
        },
    ),
}
